--- a/whr/store/templates/store/Menu/ReportMenu.html
+++ b/whr/store/templates/store/Menu/ReportMenu.html
@@ -21,7 +21,7 @@
     <h5 class="card-title ">ТМЦ по подразделениям</h5>
      <img class="card-img-top miniature" src="{% static '/images/report4.png' %}" >
     <p class="card-text">Отчет о движении ТМЦ по подразделениям</p>
-    <a href="{% url 'JurnalPost' %}" class="btn btn-primary">Просмотр</a>
+    <a href="{% url 'PodrazReport' %}" class="btn btn-primary">Просмотр</a>
     </div>
     </div>
 </div>
