--- a/whr/store/templates/store/Doc/AddStringMove.html
+++ b/whr/store/templates/store/Doc/AddStringMove.html
@@ -40,8 +40,8 @@
 <table class=" table shadow table-hover table-bordered ">
     <thead class="bg-primary text-white">
   <th style="width:30%"  >Наименование, ед.изм.</th>
-  <th style="width:14%" class="text-end" >Цена</th>
   <th style="width:14%" class="text-end" >Количество</th>
+  <th style="width:14%" class="text-end" >Цена</th>
   <th style="width:14%" class="text-end" >Сумма</th>
   <th style="width:8%" class="text-end" >НДС</th>
   <th style="width:14%" class="text-end" >Сумма с НДС</th>
@@ -56,13 +56,14 @@
             {% for item in uniqset %}
             <option value="{{item.title}}" class="text-start"  data-count={{item.count}}
             data-price={{item.price}}
-            >{{item.title__title}} Цена: {{item.price}} руб; На складе {{item.count}} {{item.title__izm__title}}
+            >{{item.title__title}},На складе {{item.count}} {{item.title__izm__title}}, Цена: {{item.price}} руб;
             </option>
             {% endfor %}
        </select>
         </td>
+        <td><input type="number" id="idmovekol" class="form-control text-end" step="any" required min="0" ></td>
 <td><input type="text" id="idmoveprice" class="form-control text-end"  readonly></td>
-<td><input type="number" id="idmovekol" class="form-control text-end" step="any" required min="0" ></td>
+
 <td><input type="number" id="idmovesum" class="form-control text-end" step="any" required min="0" readonly></td>
 <td><input type="number" id="idmovends" class="form-control text-end" step="any" required min="0" value="20"></td>
 <td><input type="number" id="idmovetotal" class="form-control text-end" step="any" required min="0" readonly></td>
@@ -71,8 +72,9 @@
     </tr></form>
 {% for item in items %}
     <tr><td>{{item.title}},{{item.title.izm}}</td>
+     <td class="text-end">{% abs_tag item.kol %}</td>
     <td class="text-end">{% abs_tag item.price %}</td>
-    <td class="text-end">{% abs_tag item.kol %}</td>
+
     <td class="text-end">{% abs_tag item.summa %}</td>
     <td class="text-end " >{% abs_tag item.nds %}</td>
     <td class="text-end">{% abs_tag item.summawithnds %}</td>
@@ -95,8 +97,9 @@
           <table class="table shadow table-hover table-bordered">
               <thead class="bg-primary text-light">
               <th>Наименование</th>
-              <th class="text-end">Цена</th>
               <th class="text-end">Количество</th>
+              <th class="text-end">Цена</th>
+
               <th class="text-end">Сумма</th>
               <th class="text-end">НДС</th>
               <th class="text-end">Сумма с НДС</th>
@@ -110,13 +113,13 @@
             {% for item in uniqset %}
             <option value="{{item.title}}" class="text-start"  data-count={{item.count}}
             data-price={{item.price}} data-id2="{{item.iddoc}}"
-            >{{item.title__title}} Цена: {{item.price}} руб; На складе {{item.count}} {{item.title__izm__title}}
+            >{{item.title__title}}  На складе {{item.count}} {{item.title__izm__title}},Цена: {{item.price}} руб;
             </option>
             {% endfor %}
        </select>
-                </td>
+                </td><td><input type="number" id="editmovekol" class="form-control text-end" step="any" required min="0" ></td>
 <td><input type="text" id="editmoveprice" class="form-control text-end"  readonly></td>
-<td><input type="number" id="editmovekol" class="form-control text-end" step="any" required min="0" ></td>
+
 <td><input type="number" id="editmovesum" class="form-control text-end" step="any" required min="0" readonly></td>
 <td><input type="number" id="editmovends" class="form-control text-end" step="any" required min="0" ></td>
 <td><input type="number" id="editmovetotal" class="form-control text-end" step="any" required min="0" readonly></td>
