--- a/whr/store/templates/store/Menu/ReportMenu.html
+++ b/whr/store/templates/store/Menu/ReportMenu.html
@@ -32,7 +32,7 @@
     <h5 class="card-title">ТМЦ по объектам</h5>
      <img class="card-img-top miniature" src="{% static '/images/report4.png' %}" >
     <p class="card-text">Отчет о движении ТМЦ по объектам</p>
-    <a href="{% url 'JurnalMove' %}" class="btn btn-primary">Просмотр</a>
+    <a href="{% url 'ObctReport' %}" class="btn btn-primary">Просмотр</a>
     </div>
     </div>
 </div>
