--- a/whr/store/templates/store/Menu/ReportMenu.html
+++ b/whr/store/templates/store/Menu/ReportMenu.html
@@ -43,7 +43,7 @@
     <h5 class="card-title">ТМЦ по подотчету</h5>
      <img class="card-img-top miniature" src="{% static '/images/report3.png' %}" >
     <p class="card-text">Отчет о движении ТМЦ по подотчету</p>
-    <a href="#" class="btn btn-primary">Просмотр</a>
+    <a href="{% url 'FioReport' %}" class="btn btn-primary">Просмотр</a>
     </div>
     </div>
 </div>
